[package]
name = "wasmcloud-browser-host"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = ["Window", "Document", "HtmlElement", "Text"] }
wascap = "0.10.0" # above this version the ring depedency fails to compile to wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5"}
nkeys = "0.4.4"
js-sys = "0.3.76"
