[package]
name = "wasmcloud-rs-js"
version = "0.1.0"
authors = ["ks2211 <kaushik@cosmonic.com>"]
edition = "2018"
description = "wasmcloud/wascap/nkeys rust crates ported to JavaScript via wasm-bindgen and wasm-pack"
repository = "github.com/wasmCloud/wasmcloudjs"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"
wascap = "0.10.0" # above this version the ring depedency fails to compile to wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5"}
js-sys = "0.3.76"
nkeys = "0.4.4"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
